	* cgicc/HTTPHeaders.h(HTTPHeader): Added setCookie method
	* cgicc/HTTPHeaders.cpp: Added logic to render() for HTTPCookies
	* cgicc/CgiEnvironment.h: Added cookie_iterator, 
	const_cookie_iterator typedefs
	* demo/Makefile.am: Added target cookie.cgi
	* demo/cookie.{cpp,html}: New files
	* demo/README: Updated for new XHTML files and cookie.cgi

2001-09-02  Stephen F. Booth  <sbooth@gnu.org>

	* THANKS: Fixed punctuation
	* doc/Makefile.am: Install HTML documentation into $(prefix)/doc
	* demo/test.cpp: Added documentation
	* demo/upload.cpp: Added documentation

2001-09-01  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/CgiUtils.cpp(writeString): Fixed bug assuming string.getData()
	was null-terminated (bug fix submitted by fine@netease.com)
	* demo/test.cpp: Changed HTML footer
	* demo/dns.cpp: Changed HTML footer
	* demo/upload.cpp: Changed HTML footer

2001-08-30  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/CgiEnvironment.h: Added fUsingHTTPS data member
	* cgicc/CgiEnvironment.cpp(readEnvironmentVariables): Added WIN32 
	specific section to determing is connection is secure
	(bug fix submitted by peter.goedtkindt@axstech.com)
	* cgicc/CgiEnvironment.cpp(save, restore): Whether connection is
	secure is now saved/restored
	* THANKS: Thanks to Peter Goedtkindt
	* Makefile.am: Removed references to example/ltmain.sh and 
	example/ltconfig

2001-07-04  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/*.h: Changed license to LGPL
	* cgicc/*.cpp: Changed license to LGPL
	* acconfig.h: Changed license to LGPL
	* COPYING.LIB: Added

2001-07-01  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/HTMLElements.h: Fix memory leak in HTMLElement assignment 
	operator (bug fix submitted by fdegros@soreh.fr)
	* cgicc/HTMLClasses.h: Changed tags to lowercase
	* cgicc/HTMLAttributes.h: Removed idea of 'atomic' attributes
	* cgicc/HTMLAttributes.cpp: Removed 'atomic' attribute
	* cgicc/HTMLElements.cpp(render): Atomic elements now rendered
	with a trailing / (for SGML/XML compliance)