@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.8 2001/09/03 16:22:12 sbooth Exp $
+## $Id: Makefile.am,v 1.9 2001/09/03 22:16:18 sbooth Exp $
 
 CLEANFILES = *~
 
@@ -28,9 +28,16 @@ all: html
 distclean-local:
 	rm -rf html
 
+if MAINTAINER_MODE
+################################################################
+##
+## Everything past here is useful to the maintainer, but probably not
+## to anybody else (taken from libtool/Makefile.am).
+##
 html: $(DOXYFILE) $(EXTRA_DIST) $(srcdir)/../cgicc/*.h $(srcdir)/../demo/*.cpp
 	DATE=`date '+%-d %b %Y'` VERSION=$(VERSION) $(DOXYGEN) $(DOXYFILE)
 	cp $(IMAGES) html
 	mv html/index.html html/index.html.bak
 	sed -e '$(SEDCMD1)' -e '$(SEDCMD2)' html/index.html.bak > html/index.html
 	rm -f html/index.html.bak
+endif
